[gd_scene load_steps=22 format=3]

[ext_resource type="Texture2D" path="res://assets/escenarios/fondo_de_bikini.png" id="1_v1h3s"]
[ext_resource type="PackedScene" path="res://scenes/escenarios/final-screen.tscn" id="2_csp43"]
[ext_resource type="Script" path="res://scripts/escenarios/final_screen.gd" id="3_45qb2"]
[ext_resource type="PackedScene" path="res://scenes/escenarios/timer_label.tscn" id="4_v4e0a"]
[ext_resource type="Script" path="res://scripts/escenarios/timer_label.gd" id="5_ercdy"]
[ext_resource type="PackedScene" path="res://scenes/objetos/lives.tscn" id="6_u6dqm"]
[ext_resource type="Script" path="res://scripts/objetos/lives.gd" id="7_n0mdx"]
[ext_resource type="PackedScene" path="res://scenes/escenarios/losing-screen.tscn" id="7_yxo0k"]
[ext_resource type="Script" path="res://scripts/escenarios/losing_screen2.gd" id="8_4c8jf"]
[ext_resource type="PackedScene" path="res://scenes/personajes/patricio-tryhard.tscn" id="13_yuevk"]
[ext_resource type="Script" path="res://scripts/personajes/patricio-tryhard.gd" id="14_cqsl8"]
[ext_resource type="PackedScene" path="res://scenes/personajes/plankton.tscn" id="15_r302o"]
[ext_resource type="Script" path="res://scripts/personajes/plankton.gd" id="16_fu7si"]
[ext_resource type="AudioStream" path="res://assets/music/Spongebob soundtrack_Plankton's theme(Chill out).mp3" id="17_b2uk6"]
[ext_resource type="PackedScene" path="res://scenes/mainmenu/pause_menu.tscn" id="30_j6u8c"]
[ext_resource type="Shader" path="res://assets/escenarios/pausemenu.gdshader" id="31_0jq5q"]
[ext_resource type="Script" path="res://scripts/mainmenu/pause_menu.gd" id="32_pmage"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_m80is"]
distance = -95.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rmkmq"]
shader = ExtResource("31_0jq5q")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xikg6"]
bg_color = Color(0.0235294, 0.0235294, 0.0235294, 0.670588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1hdb"]
bg_color = Color(0.483266, 0.0553308, 0.171809, 1)

[node name="BossFight" type="Node2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-2, 0)

[node name="TextureRect" type="TextureRect" parent="StaticBody2D"]
offset_right = 1156.0
offset_bottom = 650.0
texture = ExtResource("1_v1h3s")
expand_mode = 1

[node name="wall-lower" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(576, 469)
shape = SubResource("WorldBoundaryShape2D_m80is")

[node name="wall-upper" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(576, 179)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_m80is")

[node name="Fixed" type="CanvasLayer" parent="."]

[node name="Final-screen" type="Control" parent="Fixed" instance=ExtResource("2_csp43")]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_45qb2")

[node name="PauseMenu" type="Control" parent="Fixed" instance=ExtResource("30_j6u8c")]
unique_name_in_owner = true
process_mode = 3
material = SubResource("ShaderMaterial_rmkmq")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("32_pmage")
game_time = 0

[node name="Losing-screen" type="Control" parent="Fixed" instance=ExtResource("7_yxo0k")]
unique_name_in_owner = true
process_mode = 3
visible = false
z_index = 25
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("8_4c8jf")

[node name="TimerLabel" type="Label" parent="Fixed" instance=ExtResource("4_v4e0a")]
offset_left = 550.0
offset_top = 20.0
offset_right = 590.0
offset_bottom = 43.0
scale = Vector2(3, 3)
text = "00:01:18"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_ercdy")

[node name="BossName" type="TextEdit" parent="Fixed"]
unique_name_in_owner = true
offset_left = 474.0
offset_top = 562.0
offset_right = 673.0
offset_bottom = 597.0
text = "Plankton el malo maloso"

[node name="BossBar" type="ProgressBar" parent="Fixed"]
unique_name_in_owner = true
offset_left = 30.0
offset_top = 601.0
offset_right = 1125.0
offset_bottom = 628.0
theme_override_styles/background = SubResource("StyleBoxFlat_xikg6")
theme_override_styles/fill = SubResource("StyleBoxFlat_b1hdb")
max_value = 40.0
value = 40.0
show_percentage = false

[node name="Lives" type="Node2D" parent="Fixed" instance=ExtResource("6_u6dqm")]
unique_name_in_owner = true
script = ExtResource("7_n0mdx")

[node name="Patricio-tryhard" type="CharacterBody2D" parent="." instance=ExtResource("13_yuevk")]
position = Vector2(207, 466)
script = ExtResource("14_cqsl8")

[node name="Plankton" type="CharacterBody2D" parent="." instance=ExtResource("15_r302o")]
unique_name_in_owner = true
position = Vector2(929, 449)
velocity = Vector2(0, 150)
script = ExtResource("16_fu7si")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_b2uk6")
volume_db = -10.0
autoplay = true
stream_paused = true

[connection signal="body_entered" from="BulletPlankton" to="BulletPlankton" method="_on_body_entered"]
