[gd_scene load_steps=5 format=3 uid="uid://cj6w1yel87f2o"]

[ext_resource type="Script" path="res://scripts/escenarios/final_screen.gd" id="1_hbvci"]
[ext_resource type="Texture2D" uid="uid://comi54dwhmwok" path="res://assets/escenarios/menu_background.jpg" id="2_4tkad"]

[sub_resource type="SystemFont" id="SystemFont_66s4q"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_xaole"]
font_names = PackedStringArray("Impact")

[node name="Final-screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hbvci")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_4tkad")
expand_mode = 2

[node name="Label2" type="Label" parent="."]
offset_left = 457.0
offset_top = 365.0
offset_right = 764.0
offset_bottom = 415.0
theme_override_fonts/font = SubResource("SystemFont_66s4q")
theme_override_font_sizes/font_size = 40
text = "Your final score is: "

[node name="Label" type="Label" parent="."]
offset_left = 512.0
offset_top = 216.0
offset_right = 694.0
offset_bottom = 278.0
theme_override_fonts/font = SubResource("SystemFont_xaole")
theme_override_font_sizes/font_size = 50
text = "You win!!"

[node name="Button" type="Button" parent="."]
offset_left = 468.0
offset_top = 520.0
offset_right = 705.0
offset_bottom = 573.0
text = "BACK TO MAIN MENU"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
